--- a/MatchingUtilities/MatchingUtilities.csproj
+++ b/MatchingUtilities/MatchingUtilities.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0-preview.4.21253.1" />
   </ItemGroup>
 
